templates/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-network-policy
  namespace: yaml-yodelers
spec:
  podSelector:
    matchLabels:
      app: frontend
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: yaml-yodelers
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: nginx-ingress
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 192.168.0.0/16
              - 172.16.0.0/12
              - 10.0.0.0/8
              - 169.254.0.0/16
              - 100.64.0.0/10
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: yaml-yodelers
          podSelector:
            matchLabels:
              app: frontend
      ports:
        - port: 80
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: yaml-yodelers
          podSelector:
            matchLabels:
              app: frontend
      ports:
        - port: 443
          protocol: TCP
  policyTypes:
    - Ingress
    - Egress
